# stable-dracor

./: .gitignore  Dockerfile  README.md  capek.ipynb  classical_receptions_corpus.ipynb  compose.empty.yml  compose.fullstack.empty.yml  compose.vebidracor.amd.yml  compose.vebidracor.yml  compose.yml  docker-compose.empty.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py  stable-dracor-workflow.ipynb  test_client.ipynb  vebidracor.ipynb  vebidracor_amd.ipynb
client/: client.py
configurations/: compose.fullstack.amd.empty.yml  compose.fullstack.v0.empty.yml  compose.fullstack.v1.empty.yml
export/: README.md
import/: README.md
notebooks/: 01_quickstart.ipynb  02_intro.ipynb  03_faq.ipynb
src/stabledracor/: client.py
stabledracor/: client.py
